2003-03-19  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): Fix
	wrong usage of S_IFDIR.
	* security.cc (get_attribute_from_acl): Ditto.
	(get_file_attribute): Fix wrong usage of S_IFLNK.
	(get_object_attribute): Ditto.
	(alloc_sd): Fix wrong usage of S_IFDIR.
	* syscalls.cc (chmod): Allow chmod'ing of socket files.

2003-03-19  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_CHECK_FOR_USING_BIG_TYPES):
	Define.
	* glob.c (g_lstat): Use CYGWIN_VERSION_CHECK_FOR_USING_BIG_TYPES
	instead of numerical constants.
	(g_stat): Ditto.

2003-03-18  Thomas Pfaff  <tpfaff@gmx.net>

	* pthread.cc (pthread_attr_init): Remove
	(pthread_attr_destroy): Ditto.
	(pthread_attr_setdetachstate): Ditto.
	(pthread_attr_getdetachstate): Ditto.
	(pthread_attr_setstacksize): Ditto.
	(pthread_attr_getstacksize): Ditto.
	(pthread_attr_setinheritsched): Ditto.
	(pthread_attr_getinheritsched): Ditto.
	(pthread_attr_setschedparam): Ditto.
	(pthread_attr_getschedparam): Ditto.
	(pthread_attr_setschedpolicy): Ditto.
	(pthread_attr_getschedpolicy): Ditto.
	(pthread_attr_setscope): Ditto.
	(pthread_attr_getscope): Ditto.
	(pthread_attr_setstackaddr): Ditto.
	(pthread_attr_getstackaddr): Ditto.
	(pthread_key_create): Ditto.
	(pthread_key_delete): Ditto.
	(pthread_setspecific): Ditto.
	(pthread_getspecific): Ditto.
	(pthread_kill): Ditto.
	(pthread_sigmask): Ditto.
	(pthread_equal): Ditto.
	(pthread_mutex_lock): Ditto.
	(pthread_mutex_trylock): Ditto.
	(pthread_mutex_unlock): Ditto.
	(pthread_mutex_destroy): Ditto.
	(pthread_mutex_setprioceiling): Ditto.
	(pthread_mutex_getprioceiling): Ditto.
	(pthread_mutexattr_destroy): Ditto.
	(pthread_mutexattr_getprioceiling): Ditto.
	(pthread_mutexattr_getprotocol): Ditto.
	(pthread_mutexattr_getpshared): Ditto.
	(pthread_mutexattr_gettype): Ditto.
	(pthread_mutexattr_init): Ditto.
	(pthread_mutexattr_setprioceiling): Ditto.
	(pthread_mutexattr_setprotocol): Ditto.